# HBCD-MADE

./: .gitignore  .readthedocs.yaml  .run.py.swp  Dockerfile  FACE_ERP_Topo_Indv.m  MMN_ERP_Topo_Indv.m  README.md  RS_ERP_Topo_Indv.m  buildspec.yml  check_if_plugins_are_present.m  check_missing_dins.m  computeSME.m  compute_peaks_latencies.m  find_files_to_proc.m  grab_settings.m  make_MADE_epochs.asv  make_MADE_epochs.m  mean_flag_delay_by_site.csv  merge_data.m  proc_settings_HBCD.json  proc_settings_HBCD_LY.json  proc_settings_HBCD_LY_MM_MA.json  proc_settings_HBCD_container.json  proc_settings_fast.json  pyproject.toml  run.py  run_MADE.asv  run_MADE.m  save_specification.m  site_flag_delays_v2025_01_09.csv  test_HBCD_MADE.m  testing_settings.json
.github/workflows/: push_to_dockerhub.yml
adjusted_adjust_scripts/: MARA_extract_time_freq_features.m  Spatial_Info_eyes.m  adjusted_ADJUST.m  beall_blink_detection.m  beall_horizontal.m
archived/: update_for_single_task_proc.m
archived/archived-plottingScripts/: Generic_ERP_Topo_Indv.m
archived/archived-scripts/: batch_made_proc.m  visualize_processed_data.m
docs/source/: appendix.rst  appendix.txt  computational_requirements.rst  conf.py  container_info.rst  csv_data_dictionary.csv  data_requirements.rst  expected_outputs.rst  getting_the_container.rst  index.rst  installation.rst  json_configuration.rst  mrs_expected_inputs.rst  usage.rst  (+11 more)
python_code/: run.py
scripts/: batch_made_proc.m  make_example_json.m  run_compiled_MADE.sh  run_compiled_through_python.sh  run_container.sh  run_container_2.sh  trash.m
(+10 files in other folders)
